adding hamburger menu to header section

--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arizonia&family=Sriracha&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Arizonia&Raleway:ital,wght@1,400;1,700&display=swap" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/7d516e8610.js" crossorigin="anonymous"></script>
 
 
-    <title>Projekt końcowy</title>
+    <title>Empathy Horsewoman</title>
   </head>
   <body>
     <div id="root"></div>
