adding fb elements to hero section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <title>Empathy Horsewoman</title>
   </head>
   <body>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v16.0" nonce="W65OGuWD"></script>
     <div id="root"></div>
     <script type="module" src="/src/assets/scripts/main.jsx"></script>
   </body>
